[project]
name = "pyflaker"
version = "0.0.0"
authors = [
  { name="ekoteq", email="ekoteqmedia@gmail.com" },
]
description = "A simple Python 3.10 snowflake ID generator with bonus client/manager class."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/ekoteq/pyflaker"
"Bug Tracker" = "https://github.com/ekoteq/pyflaker/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
